fix: update HTML language attribute and improve styling for TechIA Summit 2025

--- a/Projeto-Final/index.html
+++ b/Projeto-Final/index.html
@@ -1,18 +1,18 @@
 <!doctype html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>projeto-final</title>
   </head>
   <body class="bg-[#191019] flex flex-col min-h-screen">
-    <header class="flex justify-between px-30 py-5 bg">
-      <h1 class="text-x font-bold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] bg-clip-text text-transparent">TechIA Summit 2025</h1>
+    <header class="flex justify-between px-40 py-5 bg">
+      <h1 class="text-2xl font-bold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] bg-clip-text text-transparent">TechIA Summit 2025</h1>
       <nav>
-        <ul class="flex font-bold text-xs gap-5 items-center">
+        <ul class="flex font-bold text-xl gap-8 items-center">
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#topo">Início</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Sobre</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Palestrantes</a></li>
@@ -24,31 +24,43 @@
     </header>
 
     <section id="topo" class="grow flex items-center justify-center bg-linear-to-b from-[#191019] via-[#32094D] to-[#1d234e]">
-      <div class="flex flex-col text-center items-center w-110 gap-4">
-        <p class="text-xs bg-[#3B1053] inline-block px-3 py-1 rounded-2xl border border-[#8E1DD8] text-[#8E1DD8]">15 - 17 de Dezembro, 2025</p>
-        <h1 class="text-5xl text-x font-bold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] bg-clip-text text-transparent">TechIA Summit <br><span class="text-[#ffffff]">2025</span></h1>
-        <p class="text-[#C4A0C5]">O evento que reúne os maiores especialistas e as melhores novidades em Inteligência Artificial.</p>
+      <div class="flex flex-col text-center items-center w-2xl gap-6">
+        <p class="text-xl bg-[#3B1053] inline-block px-3 py-1 rounded-2xl border border-[#8E1DD8] text-[#8E1DD8]">15 - 17 de Dezembro, 2025</p>
+        <h1 class="text-7xl text-x font-bold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] bg-clip-text text-transparent">TechIA Summit <br><span class="text-[#ffffff]">2025</span></h1>
+        <p class="text-[#C4A0C5] text-2xl">O evento que reúne os maiores especialistas e as melhores novidades em Inteligência Artificial.</p>
         <div class="flex gap-3">
-          <div class="flex gap-2 bg-[#2c0c39] text-[#ffffff] px-3 py-1 rounded-md text-xs items-center border border-[#3D263D]">
+          <div class="flex gap-2 bg-[#2c0c39] text-[#ffffff] px-3 py-1 rounded-md text-xl items-center border border-[#3D263D]">
             <i class="fa-regular fa-calendar text-[#8E1DD8]"></i>
             <p>3 dias</p>
           </div>
-          <div class="flex bg-[#2c0c39] text-[#ffffff] px-3 py-1 rounded-md text-xs items-center border border-[#3D263D]">
+          <div class="flex bg-[#2c0c39] text-[#ffffff] px-3 py-1 rounded-md text-xl items-center border border-[#3D263D]">
             <i class="fa-solid fa-location-dot text-[#2EC5CD]"></i>
-            <p class=" text-[#ffffff] px-2 py-1 pr-1 rounded-md text-xs">São Paulo, Brasil</p>
+            <p class=" text-[#ffffff] px-2 py-1 pr-1 rounded-md text-xl">São Paulo, Brasil</p>
           </div>
-          <div class="flex bg-[#2c0c39] text-[#ffffff] px-3 py-1 pr-1 rounded-md text-xs items-center border border-[#3D263D]">
+          <div class="flex bg-[#2c0c39] text-[#ffffff] px-3 py-1 pr-1 rounded-md text-xl items-center border border-[#3D263D]">
             <i class="fa-regular fa-user"></i>
-            <p class="text-[#ffffff] px-2 py-1 rounded-md text-xs">5000+ Participantes</p>
+            <p class="text-[#ffffff] px-2 py-1 rounded-md text-xl">5000+ Participantes</p>
           </div>
         </div>
         <div class="flex items-center pt-5 gap-5">
-          <button class="text-[#ffffff] font-semibold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] p-2 px-5 shadow-[0_0_50px_1px_#621595] hover:shadow-[0_0_50px_1px_#6D83FF] rounded-lg cursor-pointer">Garantir Ingresso</button>
-          <button class="text-[#ffffff] font-semibold  bg-[#191019] border border-[#6915a1] rounded-lg p-1.5 px-5 cursor-pointer hover:bg-[#36104f]">Fale com a Kor'AI</button>
+          <button class="text-xl text-[#ffffff] font-semibold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] p-2 px-5 shadow-[0_0_50px_1px_#621595] hover:shadow-[0_0_50px_1px_#6D83FF] rounded-lg cursor-pointer">Garantir Ingresso</button>
+          <button class="text-xl text-[#ffffff] font-semibold  bg-[#191019] border border-[#6915a1] rounded-lg p-1.5 px-5 cursor-pointer hover:bg-[#36104f]">Fale com a Kor'AI</button>
         </div>
       </div>
       
     </section>
     <script type="module" src="/src/main.js"></script>
+    <script src="https://unpkg.com/blip-chat-widget" type="text/javascript"></script>
+  <script>
+      (function () {
+          window.onload = function () {
+              new BlipChat()
+                  .withAppKey('cHJvamV0b2JydW5hZGlhczoyODhkNmQ0MS0xYWE5LTQzZmItODE5YS1mOTc2OWJjM2M1ODI=')
+                  .withButton({"color":"#8e1dd8","icon":"https://blipmediastore.blob.core.windows.net/permanent/Media_4_7b81914b-bed8-4153-8e06-e534b9d6a810"})
+                  .withCustomCommonUrl('https://designconv-dc-ia.chat.blip.ai/')
+                  .build();
+          }
+      })();
+  </script>
   </body>
 </html>
