feat: update navigation links and add 'sobre.html' page for TechIA Summit 2025

--- a/Projeto-Final/index.html
+++ b/Projeto-Final/index.html
@@ -12,9 +12,9 @@
       <h1 class="text-2xl font-bold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] bg-clip-text text-transparent">TechIA Summit 2025</h1>
       <nav>
         <ul class="flex font-bold text-xl gap-8 items-center">
-          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#topo">Início</a></li>
-          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Sobre</a></li>
-          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Palestrantes</a></li>
+          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="index.html">Início</a></li>
+          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="sobre.html">Sobre</a></li>
+          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Sobre nós</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Agenda</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Fale com a Kor'AI</a></li>
           <li class="text-[#ffffff] bg-[linear-gradient(to_right,#9b5cff,#5091F2)] p-2 rounded-lg hover:shadow-[0_0_5px_1px_#8E1DD8]"><a href="#">Ingressos</a></li>
