Update navigation links to point to correct pages

--- a/Projeto-Final/index.html
+++ b/Projeto-Final/index.html
@@ -15,7 +15,7 @@
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="index.html">Início</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="sobre.html">Sobre</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Sobre nós</a></li>
-          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Agenda</a></li>
+          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="Agenda.html">Agenda</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Fale com a Kor'AI</a></li>
           <li class="text-[#ffffff] bg-[linear-gradient(to_right,#9b5cff,#5091F2)] p-2 rounded-lg hover:shadow-[0_0_5px_1px_#8E1DD8]"><a href="./ingressos.html">Ingressos</a></li>
         </ul>
