--- a/Projeto-Final/ingressos.html
+++ b/Projeto-Final/ingressos.html
@@ -21,13 +21,13 @@
           <a href="index.html">Início</a>
         </li>
         <li class="text-[#D1CED1] hover:text-[#8E1DD8]">
-          <a href="#">Sobre</a>
+          <a href="sobre.html">Sobre</a>
         </li>
         <li class="text-[#D1CED1] hover:text-[#8E1DD8]">
-          <a href="#">Palestrantes</a>
+          <a href="#">Sobre nós</a>
         </li>
         <li class="text-[#D1CED1] hover:text-[#8E1DD8]">
-          <a href="#">Agenda</a>
+          <a href="Agenda.html">Agenda</a>
         </li>
         <li class="text-[#D1CED1] hover:text-[#8E1DD8]">
           <a href="#">Fale com a Kor'AI</a>
