Update "Fale com a Kor'AI" links to point to the Blip chat service and add Blip chat widget initialization script

--- a/Projeto-Final/index.html
+++ b/Projeto-Final/index.html
@@ -16,7 +16,7 @@
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="sobre.html">Sobre</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="sobrenos.html">Sobre nós</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="Agenda.html">Agenda</a></li>
-          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#">Fale com a Kor'AI</a></li>
+          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="https://designconv-dc-ia.chat.blip.ai/?appKey=cHJvamV0b2JydW5hZGlhczoyODhkNmQ0MS0xYWE5LTQzZmItODE5YS1mOTc2OWJjM2M1ODI=&_gl=1*1sb9ifs*_gcl_au*NjI1NDE4NTI3LjE3NjI4NjM5NTIuMjQ4ODgzNTQ0LjE3NjMwNDk3MDIuMTc2MzA1MTUyOA..*_ga*MTg5Mjg3NDMyMS4xNzYyNzgzOTk1*_ga_8GVWK8YMGL*czE3NjMwNDk2NzEkbzEzJGcxJHQxNzYzMDUxNTI4JGo1OCRsMCRoMTE5MzUyNzg0MA" target="_blank">Fale com a Kor'AI</a></li>
           <li class="text-[#ffffff] bg-[linear-gradient(to_right,#9b5cff,#5091F2)] p-2 rounded-lg hover:shadow-[0_0_5px_1px_#8E1DD8]"><a href="./ingressos.html">Ingressos</a></li>
         </ul>
       </nav>
@@ -43,7 +43,7 @@
         </div>
         <div class="flex items-center pt-5 gap-5">
           <button class="text-xl text-[#ffffff] font-semibold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] p-2 px-5 shadow-[0_0_50px_1px_#621595] hover:shadow-[0_0_50px_1px_#6D83FF] rounded-lg cursor-pointer"><a href="./ingressos.html">Garantir Ingresso</a></button>
-          <button class="text-xl text-[#ffffff] font-semibold  bg-[#191019] border border-[#6915a1] rounded-lg p-1.5 px-5 cursor-pointer hover:bg-[#36104f]">Fale com a Kor'AI</button>
+          <a href="https://designconv-dc-ia.chat.blip.ai/?appKey=cHJvamV0b2JydW5hZGlhczoyODhkNmQ0MS0xYWE5LTQzZmItODE5YS1mOTc2OWJjM2M1ODI=&_gl=1*1sb9ifs*_gcl_au*NjI1NDE4NTI3LjE3NjI4NjM5NTIuMjQ4ODgzNTQ0LjE3NjMwNDk3MDIuMTc2MzA1MTUyOA..*_ga*MTg5Mjg3NDMyMS4xNzYyNzgzOTk1*_ga_8GVWK8YMGL*czE3NjMwNDk2NzEkbzEzJGcxJHQxNzYzMDUxNTI4JGo1OCRsMCRoMTE5MzUyNzg0MA" target="_blank" class="text-xl text-[#ffffff] font-semibold  bg-[#191019] border border-[#6915a1] rounded-lg p-1.5 px-5 cursor-pointer hover:bg-[#36104f]">Fale com a Kor'AI</a>
         </div>
       </div>
       
