--- a/Projeto-Final/ingressos.html
+++ b/Projeto-Final/ingressos.html
@@ -29,9 +29,7 @@
         <li class="text-[#D1CED1] hover:text-[#8E1DD8]">
           <a href="Agenda.html">Agenda</a>
         </li>
-        <li class="text-[#D1CED1] hover:text-[#8E1DD8]">
-          <a href="#">Fale com a Kor'AI</a>
-        </li>
+        <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="https://designconv-dc-ia.chat.blip.ai/?appKey=cHJvamV0b2JydW5hZGlhczoyODhkNmQ0MS0xYWE5LTQzZmItODE5YS1mOTc2OWJjM2M1ODI=&_gl=1*1sb9ifs*_gcl_au*NjI1NDE4NTI3LjE3NjI4NjM5NTIuMjQ4ODgzNTQ0LjE3NjMwNDk3MDIuMTc2MzA1MTUyOA..*_ga*MTg5Mjg3NDMyMS4xNzYyNzgzOTk1*_ga_8GVWK8YMGL*czE3NjMwNDk2NzEkbzEzJGcxJHQxNzYzMDUxNTI4JGo1OCRsMCRoMTE5MzUyNzg0MA" target="_blank">Fale com a Kor'AI</a></li>
         <li
           class="text-[#ffffff] bg-[linear-gradient(to_right,#9b5cff,#5091F2)] p-2 rounded-lg hover:shadow-[0_0_5px_1px_#8E1DD8]">
           <a href="ingressos.html">Ingressos</a>
