Criação e estilização do footer em todas as páginas

--- a/Projeto-Final/Agenda.html
+++ b/Projeto-Final/Agenda.html
@@ -193,6 +193,58 @@
       </div>
     </section>
 
+    <footer id="site-footer" class="bg-[#0f0a13] border-t border-[#2b1633] text-[#D1CED1] px-40 py-12">
+      <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
+        <div class="space-y-4">
+          <h2 class="text-2xl font-bold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] bg-clip-text text-transparent">TechIA Summit</h2>
+          <p class="text-sm text-[#C4A0C5]">15 - 17 de Dezembro, 2025 • São Paulo, Brasil</p>
+          <p class="text-sm">O encontro dos maiores especialistas em Inteligência Artificial — networking, painéis e workshops.</p>
+          <div class="flex gap-3 pt-2">
+            <a href="#" class="w-9 h-9 rounded-full bg-[#2c0c39] flex items-center justify-center text-[#8E1DD8] hover:scale-105 transition"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="w-9 h-9 rounded-full bg-[#2c0c39] flex items-center justify-center text-[#8E1DD8] hover:scale-105 transition"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="w-9 h-9 rounded-full bg-[#2c0c39] flex items-center justify-center text-[#8E1DD8] hover:scale-105 transition"><i class="fab fa-linkedin-in"></i></a>
+          </div>
+        </div>
+
+        <div>
+          <h3 class="font-semibold text-lg mb-3">Links rápidos</h3>
+          <ul class="space-y-2 text-sm">
+            <li><a class="hover:text-[#9b5cff]" href="index.html">Início</a></li>
+            <li><a class="hover:text-[#9b5cff]" href="sobre.html">Sobre</a></li>
+            <li><a class="hover:text-[#9b5cff]" href="sobrenos.html">Sobre nós</a></li>
+            <li><a class="hover:text-[#9b5cff]" href="Agenda.html">Agenda</a></li>
+            <li><a class="hover:text-[#9b5cff]" href="ingressos.html">Ingressos</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h3 class="font-semibold text-lg mb-3">Informações</h3>
+          <ul class="space-y-2 text-sm">
+            <li>Email: <a class="text-[#9b5cff] hover:underline" href="mailto:contato@techiasummit.com">contato@techiasummit.com</a></li>
+            <li>Local: <span class="text-[#C4A0C5]">Expo Center Norte — São Paulo</span></li>
+          </ul>
+        </div>
+
+        <div>
+          <h3 class="font-semibold text-lg mb-3">Newsletter</h3>
+          <p class="text-sm text-[#C4A0C5] mb-3">Receba novidades, palestrantes e ofertas de ingressos.</p>
+          <form class="flex gap-2" action="#" method="post" onsubmit="event.preventDefault(); alert('Obrigad@! Você foi inscrito(a).');">
+            <input aria-label="Email" type="email" required placeholder="seu@email.com" class="flex-1 px-3 py-2 rounded-md bg-[#1a0f20] border border-[#2b1633] text-[#ffffff] text-sm" />
+            <button type="submit" class="px-4 py-2 rounded-md bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] text-white font-semibold hover:shadow-[0_0_10px_#6D83FF]">Inscrever</button>
+          </form>
+          <p class="text-xs text-[#9b85a6] mt-3">Ao se inscrever, você concorda em receber comunicações do TechIA Summit.</p>
+        </div>
+      </div>
+
+      <div class="max-w-7xl mx-auto mt-8 pt-6 border-t border-[#2b1633] text-xs text-[#A9A0B0] flex flex-col md:flex-row items-center justify-between px-4">
+        <p>© 2025 TechIA Summit. Todos os direitos reservados.</p>
+        <div class="flex gap-4 mt-3 md:mt-0">
+          <a href="#" class="hover:text-[#9b5cff]">Política de Privacidade</a>
+          <a href="#" class="hover:text-[#9b5cff]">Termos de Uso</a>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://unpkg.com/blip-chat-widget" type="text/javascript"></script>
   <script>
       (function () {
