Ajustando o nome da Kora

--- a/Projeto-Final/sobrenos.html
+++ b/Projeto-Final/sobrenos.html
@@ -29,7 +29,7 @@
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="sobre.html">Sobre</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="#sobrenos.html">Sobre nós</a></li>
           <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="Agenda.html">Agenda</a></li>
-          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="https://designconv-dc-ia.chat.blip.ai/?appKey=cHJvamV0b2JydW5hZGlhczoyODhkNmQ0MS0xYWE5LTQzZmItODE5YS1mOTc2OWJjM2M1ODI=&_gl=1*1sb9ifs*_gcl_au*NjI1NDE4NTI3LjE3NjI4NjM5NTIuMjQ4ODgzNTQ0LjE3NjMwNDk3MDIuMTc2MzA1MTUyOA..*_ga*MTg5Mjg3NDMyMS4xNzYyNzgzOTk1*_ga_8GVWK8YMGL*czE3NjMwNDk2NzEkbzEzJGcxJHQxNzYzMDUxNTI4JGo1OCRsMCRoMTE5MzUyNzg0MA" target="_blank">Fale com a Kor'AI</a></li>
+          <li class="text-[#D1CED1] hover:text-[#8E1DD8]"><a href="https://designconv-dc-ia.chat.blip.ai/?appKey=cHJvamV0b2JydW5hZGlhczoyODhkNmQ0MS0xYWE5LTQzZmItODE5YS1mOTc2OWJjM2M1ODI=&_gl=1*1sb9ifs*_gcl_au*NjI1NDE4NTI3LjE3NjI4NjM5NTIuMjQ4ODgzNTQ0LjE3NjMwNDk3MDIuMTc2MzA1MTUyOA..*_ga*MTg5Mjg3NDMyMS4xNzYyNzgzOTk1*_ga_8GVWK8YMGL*czE3NjMwNDk2NzEkbzEzJGcxJHQxNzYzMDUxNTI4JGo1OCRsMCRoMTE5MzUyNzg0MA" target="_blank">Fale com a Kora</a></li>
           <li class="text-[#ffffff] bg-[linear-gradient(to_right,#9b5cff,#5091F2)] p-2 rounded-lg hover:shadow-[0_0_5px_1px_#8E1DD8]"><a href="ingressos.html">Ingressos</a></li>
         </ul>
       </nav>
@@ -43,7 +43,7 @@
     <h2>SOBRE NÓS</h2>
     <p>
       Somos um squad de 5 estagiários da <strong>Blip</strong> que acredita que tecnologia + criatividade é a receita perfeita pra criar o futuro.<br><br>
-      Como parte do <strong>Bootcamp Fullstack IA da SoulCode</strong> temos a missão de criar um chatbot inteligente, integrado direto na página web e usando o Blip Studio demos vida à nossa querida Kor’AI :)<br><br>
+      Como parte do <strong>Bootcamp Fullstack IA da SoulCode</strong> temos a missão de criar um chatbot inteligente, integrado direto na página web e usando o Blip Studio demos vida à nossa querida Kora :)<br><br>
       A gente acredita em aprender fazendo, quebrar a cabeça junto, rir, testar, errar, ajustar e construir algo que faça a diferença. No final, é sobre colocar a mão no código e dar vida a conversas que realmente funcionam.
     </p>
 
@@ -88,7 +88,7 @@
         <div>
           <h3 class="font-semibold text-lg mb-3">Informações</h3>
           <ul class="space-y-2 text-sm">
-            <li>Email: <a class="text-[#9b5cff] hover:underline" href="mailto:contato@techiasummit.com">contato@techiasummit.com</a></li>
+            <li>WhatsApp: <a class="text-[#9b5cff] hover:underline" href="https://designconv-dc-ia.chat.blip.ai/?appKey=cHJvamV0b2JydW5hZGlhczoyODhkNmQ0MS0xYWE5LTQzZmItODE5YS1mOTc2OWJjM2M1ODI=&_gl=1*1sb9ifs*_gcl_au*NjI1NDE4NTI3LjE3NjI4NjM5NTIuMjQ4ODgzNTQ0LjE3NjMwNDk3MDIuMTc2MzA1MTUyOA..*_ga*MTg5Mjg3NDMyMS4xNzYyNzgzOTk1*_ga_8GVWK8YMGL*czE3NjMwNDk2NzEkbzEzJGcxJHQxNzYzMDUxNTI4JGo1OCRsMCRoMTE5MzUyNzg0MA">(11) 987654321</a></li>
             <li>Local: <span class="text-[#C4A0C5]">Expo Center Norte — São Paulo</span></li>
           </ul>
         </div>
