Ajustando informações do evento

--- a/Projeto-Final/sobre.html
+++ b/Projeto-Final/sobre.html
@@ -23,7 +23,7 @@
     </header>
 
         <section class="flex-grow py-20 text-center bg-linear-to-b from-[#191019] via-[#32094D] to-[#1d234e]"><h2 class="text-7xl text-x font-bold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] bg-clip-text text-transparent">Sobre o Evento</h2>
-        <p class="text-[#C4A0C5] text-xl max-w-3xl mx-auto mb-16">O TechIA Summit 2025 é o evento definitivo para quem deseja estar na vanguarda da revolução da inteligência artificial. Três dias de conteúdo intenso, networking de alto nível e oportunidades únicas.</p>
+        <p class="text-[#C4A0C5] text-xl max-w-3xl mx-auto mb-16">O TechIA Summit 2025 é o evento definitivo para quem deseja estar na vanguarda da revolução da inteligência artificial. Sete dias de conteúdo intenso, networking de alto nível e oportunidades únicas.</p>
         
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 px-20 mb-20">
           <div class="bg-[#2c0c39] p-8 rounded-lg text-left border border-[#3D263D]">
@@ -68,7 +68,7 @@
       <div class="max-w-7xl mx-auto grid grid-cols-1 md:grid-cols-4 gap-8">
         <div class="space-y-4">
           <h2 class="text-2xl font-bold bg-[linear-gradient(to_right,#9b5cff,#00e0ff)] bg-clip-text text-transparent">TechIA Summit</h2>
-          <p class="text-sm text-[#C4A0C5]">15 - 17 de Dezembro, 2025 • São Paulo, Brasil</p>
+          <p class="text-sm text-[#C4A0C5]"> 1 - 7 de Dezembro, 2025 • São Paulo, Brasil</p>
           <p class="text-sm">O encontro dos maiores especialistas em Inteligência Artificial — networking, painéis e workshops.</p>
           <div class="flex gap-3 pt-2">
             <a href="#" class="w-9 h-9 rounded-full bg-[#2c0c39] flex items-center justify-center text-[#8E1DD8] hover:scale-105 transition"><i class="fab fa-facebook-f"></i></a>
